[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abct"
version = "1.0.1"
description = "Python implementation of the abct"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "pydantic>=2.0"]

[tool.setuptools]
packages = ["abct", "abct.loyv", "abct.docstrings"]

[tool.setuptools.package-data]
"abct.docstrings" = ["*"]
